--- a/CDGLayoutTricks/Storyboards/Base.lproj/Main.storyboard
+++ b/CDGLayoutTricks/Storyboards/Base.lproj/Main.storyboard
@@ -17,12 +17,32 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kzB-Jt-AsA">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="lk4-Q4-re5"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="yce-Jd-b7w"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="kzB-Jt-AsA" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="4wl-H7-2w6"/>
+                            <constraint firstItem="kzB-Jt-AsA" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="BUk-CR-hJX"/>
+                            <constraint firstItem="kzB-Jt-AsA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="byy-gT-S9J"/>
+                            <constraint firstItem="kzB-Jt-AsA" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="vx2-aj-CNG"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="tblGuides" destination="kzB-Jt-AsA" id="psg-3W-o5n"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
